--- a/public/StandardExtensions/extensionloader.css
+++ b/public/StandardExtensions/extensionloader.css
@@ -1,1 +1,2 @@
-#extensionlist{display: none;padding: 10px 0px;}
+#extensionlist{padding: 10px 0px;}
+.tobegin{position: absolute;font-size: 20px;opacity: 0.5;top: 15%;left: 5%;}
