configs updated, minor UI improvements and EULA added

--- a/public/StandardExtensions/extensionloader.css
+++ b/public/StandardExtensions/extensionloader.css
@@ -1,6 +1,6 @@
 #extensionlist{padding: 10px 0px;}
 .tobegin{position: absolute;font-size: 20px;opacity: 0.5;top: 15%;left: 5%;}
-
+.extensions-heading{margin-top: 0;}
 
 .exl_wrapper {
     position: relative;
