--- a/public/extensions/TransformationExtension/contents/main.css
+++ b/public/extensions/TransformationExtension/contents/main.css
@@ -1,5 +1,5 @@
-.myAwesomeExtensionIcon {
-    background-image: url(img/icon.png);
+.transformextensionicon {
+    background-image: url(img/transformicon.png);
     background-size: 24px;
     background-repeat: no-repeat;
     background-position: center;
