--- a/public/extensions/NestedViewerExtension/contents/main.css
+++ b/public/extensions/NestedViewerExtension/contents/main.css
@@ -3,4 +3,9 @@
     background-size: 24px;
     background-repeat: no-repeat;
     background-position: center;
+    filter: grayscale(100%);
+}
+
+#nestedViewerExtensionButton.active {
+    filter: none;
 }
