Hard-coded nested viewer dropdown to black-on-white.

--- a/public/extensions/NestedViewerExtension/contents/main.css
+++ b/public/extensions/NestedViewerExtension/contents/main.css
@@ -9,3 +9,8 @@
 #nestedViewerExtensionButton.active {
     filter: none;
 }
+
+#nestedViewerExtensionDropdown {
+    background: #eee;
+    color: #333;
+}
