--- a/public/extensions/extensionloader.css
+++ b/public/extensions/extensionloader.css
@@ -1,103 +1,7 @@
 #extensionlist{padding: 10px 0px;}
 .tobegin{position: absolute;font-size: 20px;opacity: 0.5;top: 15%;left: 5%;}
 .extensions-heading{margin-top: 0;}
-.popover{
-min-width: 520px !important;
-  max-width: 520px !important;
-}
-.exl_wrapper {
-    position: relative;
-    z-index: 2333;
-    -webkit-transform: translateZ(0); /* webkit flicker fix */
-    -webkit-font-smoothing: antialiased; /* webkit text rendering fix */
-  }
-  
-   .exl_tooltip {
-    pointer-events:none;
-    bottom: 100%;
-    font-size: 16px;
-    display: block;
-    left: -169px;
-    width: 256px;
-    margin-bottom: 15px;
-    opacity: 0;
-    padding: 9px 14px;
-    text-align: start;
-      text-decoration: none;
-      text-shadow: none;
-      text-transform: none;
-      letter-spacing: normal;
-      word-break: normal;
-      word-spacing: normal;
-      white-space: normal;
-      line-break: auto;
-      word-wrap: break-word;
-      background-color: #fff;
-      background-clip: padding-box;
-      border: 1px solid rgba(0,0,0,.2);
-      border-radius: .3rem;
-          font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-      font-style: normal;
-      font-weight: 400;
-      line-height: 1.5;
-    position: absolute;
-    -webkit-transform: translateY(10px);
-       -moz-transform: translateY(10px);
-        -ms-transform: translateY(10px);
-         -o-transform: translateY(10px);
-            transform: translateY(10px);
-    -webkit-transition: all .25s ease-out;
-       -moz-transition: all .25s ease-out;
-        -ms-transition: all .25s ease-out;
-         -o-transition: all .25s ease-out;
-            transition: all .25s ease-out;
-    -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
-       -moz-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
-        -ms-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
-         -o-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
-            box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
-  }
-  
-  /* This bridges the gap so you can mouse into the tooltip without it disappearing */
-  .exl_wrapper .exl_tooltip:before {
-    bottom: -20px;
-    content: " ";
-    display: block;
-    height: 20px;
-    left: 0;
-    position: absolute;
-    width: 100%;
-  }  
-  
-  /* CSS Triangles - see Trevor's post */
-  .exl_wrapper .exl_tooltip:after {
-    border-left: solid transparent 10px;
-    border-right: solid transparent 10px;
-    border-top: solid rgba(0,0,0,.2) 10px;
-    bottom: -10px;
-    content: " ";
-    height: 0;
-    left: 50%;
-    margin-left: -13px;
-    position: absolute;
-    width: 0;
-  }
-    
-  .exl_wrapper:hover .exl_tooltip {
-    opacity: 100;
-    pointer-events: auto;
-    -webkit-transform: translateY(0px);
-       -moz-transform: translateY(0px);
-        -ms-transform: translateY(0px);
-         -o-transform: translateY(0px);
-            transform: translateY(0px);
-  }
-  
-  /* IE can just show/hide with no transition */
-  .exl_lte8 .exl_wrapper .exl_tooltip {
-    display: none;
-  }
-  
-  .exl_lte8 .exl_wrapper:hover .exl_tooltip {
-    display: block;
-  }
+.popover{min-width: 520px !important;max-width: 520px !important;}
+#editextensionconfig{height: 200px;}
+#learnmore{float: left;}
+#saveconfig{background: #5cb85c;color: white;}
